force-app/main/default/objects/Search_Filter__c/Search_Filter__c.object-meta.xml
<CustomObject>
    <label>e2a Search Filter</label>
    <nameField>
        <label>Search Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Search Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>