force-app/main/default/objects/Search_Filter__c/fields/App_Location__c.field-meta.xml
<CustomField>
    <fullName>App_Location__c</fullName>
    <description>Stores location of the filter in the app.</description>
    <inlineHelpText>Stores location of the filter in the app.</inlineHelpText>
    <label>App Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GlobalDefaultUserOOOCalendar</fullName>
            </value>
            <value>
                <fullName>UserStatusOOOCalendar</fullName>
            </value>
            <value>
                <fullName>UserStatusDefaultShiftCalendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>