force-app/main/default/objects/Search_Filter__c/fields/Items_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Items_Per_Page__c</fullName>
    <defaultValue>900</defaultValue>
    <label>Items Per Page</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>