force-app/main/default/objects/Search_Filter__c/fields/Related_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Object__c</fullName>
    <description>The object this filter is for</description>
    <inlineHelpText>The object this filter is for</inlineHelpText>
    <label>Related To Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>