force-app/main/default/objects/Search_Filter__c/fields/Related_To_Object_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Object_Record_Id__c</fullName>
    <description>The record ID of on the object where the filter resides.</description>
    <inlineHelpText>The record ID of on the object where the filter resides.</inlineHelpText>
    <label>Related To Object Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>