force-app/main/default/objects/Search_Filter__c/fields/Shared__c.field-meta.xml
<CustomField>
    <fullName>Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared</label>
    <type>Checkbox</type>
</CustomField>